--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-kakao-login": "^2.1.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
   },
