--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "cozyformom_admin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.cozyformom.com/api/v1",
   "dependencies": {
     "@types/react": "^19.0.8",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "http-proxy-middleware": "^3.0.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-kakao-login": "^2.1.1",
